Complete three tasks: copy URL, proper time calculation, and fullscreen enabled in iframe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- TODO: Header with search -->
 <div class="preview-container">
   <div class="column-container">
-    <app-clip-preview class="grow" *ngFor="let url of videoUrls" [videoUrl]="url">
+    <app-clip-preview class="grow" *ngFor="let url of videoUrls" [videoUrl]="url.url" [videoDate]="url.date">
     </app-clip-preview>
   </div>
 </div>
